# TextRecognition

./: README.md  settings.gradle  versions.gradle
app/: build.gradle
app/src/androidTest/java/com/ubt/textrecognition/: ExampleInstrumentedTest.kt
app/src/main/: AndroidManifest.xml
app/src/main/cpp/: CMakeLists.txt  native_lib.cpp
app/src/main/java/com/ubt/textrecognition/: BaseSurfaceView.kt  CameraActivity.kt  CameraPreviewFragment.kt  CameraXFragment.kt  ImageDetector.kt  ImageTestActivity.kt  MainActivity.kt  Test.java  TextOcrResult.kt  TextRecognitionApp.kt  TrackCodeDetector.kt  WebSocketClient.kt
app/src/main/java/com/ubt/textrecognition/render/: CameraRenderer.kt  CameraSurfaceView.kt
app/src/main/java/com/ubt/textrecognition/utils/: OpenGLUtil.kt  ShaderProgram.kt
app/src/main/java/com/ubt/textrecognition/widgets/: IndicatorRectView.kt
app/src/main/res/layout/: activity_camera.xml  activity_image_test.xml  activity_main.xml  fragment_camera_preview.xml
app/src/main/res/values/: dimens.xml
app/src/test/java/com/ubt/textrecognition/: ExampleUnitTest.kt
gradle/wrapper/: gradle-wrapper.properties
